
add_subdirectory(DstExample)
add_subdirectory(Tutorial)
add_subdirectory(EventGroupExample)
#add_subdirectory(SubeventExample)
#add_subdirectory(SubeventCUDAExample)
add_subdirectory(PodioDatamodel)
add_subdirectory(PodioFileReader)
add_subdirectory(PodioFileWriter)
add_subdirectory(TimesliceExample)
add_subdirectory(RootDatamodelExample)
add_subdirectory(InteractiveStreamingExample)
