
add_subdirectory(01_datamodel)
add_subdirectory(02_basic_source)
add_subdirectory(03_clustering)
add_subdirectory(04_csv_file_writer)
add_subdirectory(05_csv_file_reader)
add_subdirectory(06_root_file_writer)
add_subdirectory(07_root_file_reader)
add_subdirectory(08_root_histogram_writer)
add_subdirectory(09_root_event_viewer)
add_subdirectory(10_external_wiring)
add_subdirectory(11_geometry)
add_subdirectory(12_calibrations)
add_subdirectory(13_digitization)
add_subdirectory(14_simulation_source)
add_subdirectory(15_timeslice_splitter)
add_subdirectory(16_timeslice_writer)
add_subdirectory(17_subevent_splitter_merger)
add_subdirectory(18_subevent_splitter_merger_cuda)
add_subdirectory(19_streaming_actor)
add_subdirectory(20_wrapper_program)


