
add_subdirectory(01_datamodel)
add_subdirectory(02_random_hit_source)
add_subdirectory(03_clustering_algorithm)
add_subdirectory(04_ascii_heatmap_writer)
add_subdirectory(05_csv_file_writer)
add_subdirectory(06_csv_file_reader)
add_subdirectory(07_root_histogram_writer)
add_subdirectory(08_root_file_writer)
add_subdirectory(09_root_file_reader)
add_subdirectory(10_root_event_viewer)
add_subdirectory(11_calibrations)
add_subdirectory(12_geometry)
add_subdirectory(13_digitization)
add_subdirectory(14_simulation_source)
add_subdirectory(15_timeslice_splitter)
add_subdirectory(16_timeslice_writer)
add_subdirectory(17_subevent_splitter_merger)
add_subdirectory(18_subevent_splitter_merger_cuda)
add_subdirectory(19_wrapper_program)
add_subdirectory(20_streaming_actor)


